--- a/myst.yml
+++ b/myst.yml
@@ -18,6 +18,7 @@ project:
         - Continuous Science Foundation
     - name: Catherine Jones
       affiliation: UKERC Energy Data Centre Lead at STFC
+      orcid: 0000-0002-5112-835X
     - name: Roly Perera
       orcid: 0000-0001-9249-9862
       affiliation: Institute of Computing for Climate Science, Research Fellow in the Department of Computer Science and Technology, University of Cambridge
