--- a/myst.yml
+++ b/myst.yml
@@ -27,6 +27,7 @@ project:
       affiliation: Open Source Programs Specialist, University of California, Santa Barbara
     - name: Manuela Pallotto Strickland
       affiliation: Metadata and Digital Preservation Coordinator, King's College London
+      orcid: 0000-0003-4664-1383
     - name: Kirstie Whitaker
       orcid: 0000-0001-8498-4059
       affiliation: Executive Director, Berkeley Institute for Data Science, UC Berkeley
